Users.API/k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: ingress
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
      - name: identity
        image: acrproep01.azurecr.io/identity:v4.1
        ports:
        - containerPort: 80
