Users.API/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: identity-service
 namespace: ingress
spec:
 type: ClusterIP
 selector:
    app: identity
 ports:
   - port: 80
