Users.API/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
         -  path: /api/v1/identity(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
